Just add a whole bunch of stuff like i/o and a few functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.31)
-project(math2)
+project(math)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(math2 main.cpp
+add_executable(math main.cpp
         math/f32/f32.h
         math/f32/implement/f32.cpp
         math/char/char.h
@@ -11,4 +11,22 @@ add_executable(math2 main.cpp
         math/char/nan_helper.h
         math/f32/implement/f32_functions.cpp
         math/f32/f32_functions.h
+        math/f32/implement/snan_err.cpp
+        math/f32/snan_err.h
+        io/input/write/implement/str_write.cpp
+        io/input/write/str_write.h
+        string/implement/to_string.cpp
+        string/to_string.h
+        string/implement/string.cpp
+        string/string.h
+        math/f32/implement/trunc.cpp
+        math/f32/trunc.h
+        io/implement/io.cpp
+        io/io.h
+        io/input/ops/implement/cio_out_ops.cpp
+        io/input/ops/cio_out_ops.h
+        math/int/implement/trailing_zeros.cpp
+        math/int/trailing_zeros.h
+        math/f32/implement/fabs.cpp
+        math/f32/fabs.h
 )
