Slightly optimized scalbnf

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,14 +51,13 @@ add_executable(math main.cpp
         math/implement/f32/internal/frexpf.h
         math/implement/f32/implement/scalbnf.cpp
         math/implement/f32/internal/scalbnf.h
-        evil.cpp
         math/implement/f32/internal/round_mode.h
         math/implement/f32/implement/ldexpf.cpp
         math/implement/f32/internal/ldexpf.h
         math/implement/f32/internal/radix.h
-        asm.asm
         math/implement/f32/implement/ilogbf.cpp
         math/implement/f32/internal/ilogbf.h
         math/implement/f32/implement/copysignf.cpp
         math/implement/f32/internal/copysignf.h
+        main.cpp
 )
