--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,4 +66,8 @@ add_executable(math main.cpp
         math/implement/f32/internal/fmaxf.h
         math/implement/f32/implement/floorf.cpp
         math/implement/f32/internal/floorf.h
+        math/implement/f32/implement/ceilf.cpp
+        math/implement/f32/internal/ceilf.h
+        math/implement/f32/implement/roundf.cpp
+        math/implement/f32/internal/roundf.h
 )
